<resources>
    <string name="app_name">Cat Application</string>

    <string name="please_wait">Please wait..</string>
    <string name="affection_level">Affection Level</string>
    <string name="adaptability">Adaptability</string>
    <string name="energy_level">Energy Level</string>
    <string name="intelligence">Intelligence</string>
    <string name="shedding_level">Shedding Level</string>
    <string name="child_friendly">Child Friendly</string>

</resources>