<?xml version="1.0" encoding="utf-8"?>
<layout>

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorGrey39"
            android:orientation="vertical"
            android:padding="16dp">

            <ImageView
                android:id="@+id/iv_cat_breed_image"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:background="@color/colorGrey39"
                android:scaleType="fitXY" />

            <TextView
                android:id="@+id/tv_name"
                style="@style/HeaderTextStyle"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:background="@drawable/background_rectangular"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:paddingVertical="4dp"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/tv_origin"
                style="@style/HeaderTextStyle"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:background="@drawable/background_rectangular"
                android:backgroundTint="@color/colorRed"
                android:gravity="center"
                android:paddingHorizontal="10dp"
                android:paddingVertical="4dp"
                android:textColor="@color/white" />


            <TextView
                android:id="@+id/tv_description"
                style="@style/PrimaryTextStyle"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_temperament"
                style="@style/PrimaryTextStyle"
                android:fontFamily="@font/roboto_italic"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_affection_level"
                style="@style/PrimaryTextStyle"
                android:layout_marginBottom="4dp"
                android:text="@string/affection_level"
                android:textColor="@color/white" />

            <RatingBar
                android:id="@+id/rating_affection_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:isIndicator="true"
                android:rating="1" />

            <TextView
                android:id="@+id/tv_intelligence"
                style="@style/PrimaryTextStyle"
                android:layout_marginBottom="4dp"
                android:text="@string/intelligence"
                android:textColor="@color/white" />

            <RatingBar
                android:id="@+id/rating_intelligence"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:isIndicator="true"
                android:rating="1" />

            <TextView
                android:id="@+id/tv_adaptability"
                style="@style/PrimaryTextStyle"
                android:layout_marginBottom="4dp"
                android:text="@string/adaptability"
                android:textColor="@color/white" />

            <RatingBar
                android:id="@+id/rating_adaptability"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:isIndicator="true"
                android:rating="1" />

            <TextView
                android:id="@+id/tv_energy_level"
                style="@style/PrimaryTextStyle"
                android:layout_marginBottom="4dp"
                android:text="@string/energy_level"
                android:textColor="@color/white" />

            <RatingBar
                android:id="@+id/rating_energy_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:isIndicator="true"
                android:rating="1" />

            <TextView
                android:id="@+id/tv_child_friendly"
                style="@style/PrimaryTextStyle"
                android:layout_marginBottom="4dp"
                android:text="@string/child_friendly"
                android:textColor="@color/white" />

            <RatingBar
                android:id="@+id/rating_child_friendly"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:isIndicator="true"
                android:rating="1" />

            <TextView
                android:id="@+id/tv_shedding_level"
                style="@style/PrimaryTextStyle"
                android:layout_marginBottom="4dp"
                android:text="@string/shedding_level"
                android:textColor="@color/white" />

            <RatingBar
                android:id="@+id/rating_shedding_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:isIndicator="true"
                android:rating="1" />


        </LinearLayout>
    </ScrollView>
</layout>